# ComputerDetector

./: README.md
src/ComputerDetector/: CMakeLists.txt  ComputerDetector.sln  SConstruct
src/ComputerDetector/ComputerDetector/: ComputerDetector.vcxproj
src/ComputerDetector/src/: Main.cpp
src/ComputerDetector/src/x86/: cpu_x86.cpp  cpu_x86.h  cpu_x86_Linux.ipp  cpu_x86_Windows.ipp
